css/activity.css
#main-toolbar #activity-button {
  background-image: url(../activity/activity-story.svg);
}

#reload {
  background-image: url(../icons/view-refresh.svg);
}

#view-matrix {
  background-image: url(../icons/array.svg);
}

#view-one {
  background-image: url(../icons/linear.svg);
}

#save-as-image {
  background-image: url(../icons/save-as-image.svg);
}

#save-as-pdf {
  background-image: url(../icons/save-as-pdf.svg);
}

#record {
  background-image: url(../icons/media-record.svg);
}

#record:active, #record.active {
  background-image: url(../icons/media-record-active.svg);
}

#play-audio {
  background-image: url(../icons/media-playback-start.svg);
}

#canvas {
background-color: #fff;
background-image:
linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
linear-gradient(#eee .1em, transparent .1em);
background-size: 100% 1.2em;
};

#canvas p {
  margin-top: 25%;
  text-align: center;
}

#mainCanvas {
  position: absolute;
}

#textEditor {
  position: absolute;
  resize: none;
  font-size: 24pt;
  MARGIN: 0px;
  display: none;
}

/* This probably should be upstream (sugar-web, I don't know why
   the separators in the toolbars are wrong */

.toolbar hr {
  margin-bottom: 5px;
}

/* android file selector */

#file-selector {
  position: absolute;
  top: 10px;
  width: 600px;
}

#file-selector button {
  font-size: 20px;
  color: white;
  background-color: #c0c0c0;
  border-radius: 0px;
  padding: 5px;
  height: 50px;
  width: 500px;
  margin: 5px;
}

#file-selector button:hover {
  color: black;
  background-color: white;
  border-color: #c0c0c0;
}

#file-selector #exit-file-selector {
  position: absolute;
  width: 70px;
  height: 70px;
  margin: 0px;
  top: 0px;
  right: 25px;
  background-color: transparent;
  border-color: transparent;
}

#file-selector button:hover {
  background-color: transparent;
  border-color: transparent;
}

/* For the button in the alert */

button {
  font-size: 18pt;
}

#help {
  position: fixed;
  bottom: 0px;
  font-size: 24pt;
  margin: 20px;
  color: #cccccc;
  text-align: center;
  width: 100%;
}

